// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPreview /> should render a proposal preview 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <ProposalPreview__ProposalCard
    className="block--shadowed proposal-preview"
    id="proposal-1"
  >
    <Relay(ProposalPreviewBody)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "category": Object {
            "categoryImage": Object {
              "id": "categoryImage1",
              "image": null,
            },
            "color": "#eaeaea",
            "icon": "parking",
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
      viewer={null}
    />
    <Relay(Connect(ProposalPreviewFooter))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "category": Object {
            "categoryImage": Object {
              "id": "categoryImage1",
              "image": null,
            },
            "color": "#eaeaea",
            "icon": "parking",
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <Relay(ProposalPreviewStatus)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "category": Object {
            "categoryImage": Object {
              "id": "categoryImage1",
              "image": null,
            },
            "color": "#eaeaea",
            "icon": "parking",
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
    />
  </ProposalPreview__ProposalCard>
</Col>
`;

exports[`<ProposalPreview /> should render a proposal preview vip 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <ProposalPreview__ProposalCard
    className="bg-vip proposal-preview block--shadowed"
    id="proposal-1"
  >
    <ProposalPreview__ProposalImage
      src="http://image.mypicture.jpg"
    />
    <Relay(ProposalPreviewBody)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "category": Object {
            "categoryImage": Object {
              "id": "categoryImage1",
              "image": Object {
                "url": "http://image.mypicture.jpg",
              },
            },
            "color": "orange",
            "icon": "cone",
          },
          "id": "1",
          "media": null,
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
      viewer={null}
    />
    <Relay(Connect(ProposalPreviewFooter))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "category": Object {
            "categoryImage": Object {
              "id": "categoryImage1",
              "image": Object {
                "url": "http://image.mypicture.jpg",
              },
            },
            "color": "orange",
            "icon": "cone",
          },
          "id": "1",
          "media": null,
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <Relay(ProposalPreviewStatus)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": true,
          },
          "category": Object {
            "categoryImage": Object {
              "id": "categoryImage1",
              "image": Object {
                "url": "http://image.mypicture.jpg",
              },
            },
            "color": "orange",
            "icon": "cone",
          },
          "id": "1",
          "media": null,
        }
      }
    />
  </ProposalPreview__ProposalCard>
</Col>
`;

exports[`<ProposalPreview /> should render a proposal preview with custom image 1`] = `
<Col
  bsClass="col"
  componentClass="li"
  lg={3}
  md={4}
  sm={6}
  xs={12}
>
  <ProposalPreview__ProposalCard
    className="block--shadowed proposal-preview"
    id="proposal-1"
  >
    <ProposalPreview__ProposalImage
      src="/svg/img.svg"
    />
    <Relay(ProposalPreviewBody)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "category": Object {
            "categoryImage": null,
            "color": "oui",
            "icon": null,
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
      viewer={null}
    />
    <Relay(Connect(ProposalPreviewFooter))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "category": Object {
            "categoryImage": null,
            "color": "oui",
            "icon": null,
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
      step={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
        }
      }
    />
    <Relay(ProposalPreviewStatus)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "author": Object {
            "vip": false,
          },
          "category": Object {
            "categoryImage": null,
            "color": "oui",
            "icon": null,
          },
          "id": "1",
          "media": Object {
            "url": "/svg/img.svg",
          },
        }
      }
    />
  </ProposalPreview__ProposalCard>
</Col>
`;
